# claude-engram

./: .gitignore  .mcp.json  CLAUDE.md  README.md  glama.json  install.py  pyproject.toml
claude_engram/: __init__.py  embed_config.py  embed_worker.py  handlers.py  handoff_store.py  llm.py  migrations.py  schema.py  server.py  tool_definitions_v2.py
claude_engram/hooks/: __init__.py  hook_client.py  hot_reader.py  intent.py  paths.py  precheck.py  remind.py  scorer_server.py  storage.py
claude_engram/mining/: __init__.py  background.py  code_index.py  commitments.py  cross_project.py  extractors.py  jsonl_reader.py  lessons.py  outcomes.py  patterns.py  predictive.py  reflect.py  search.py  session_index.py  timeline.py
claude_engram/tools/: __init__.py  code_quality.py  context_guard.py  conventions.py  dependencies.py  habit_tracker.py  impact.py  loop_detector.py  memory.py  output_validator.py  scope_guard.py  scout.py  session.py  summarizer.py  thinker.py  work_tracker.py
library-book/: 00-elevator-pitch.md  01-the-why.md  02-the-design.md  03-quick-start.md  04-the-internals.md  05-usage-guide.md  06-advanced-usage.md  07-the-gotchas.md  08-contributing.md  09-the-roadmap.md  10-appendix.md  README.md
mini_claude/: README.md  __init__.py  handlers.py  llm.py  pyproject.toml  schema.py  server.py  tool_definitions_v2.py
mini_claude/hooks/: intent.py  remind.py  scorer_server.py
mini_claude/mini_claude/: handlers.py  schema.py  server.py  tool_definitions_v2.py
mini_claude/tools/: __init__.py  context_guard.py  conventions.py  dependencies.py  habit_tracker.py  loop_detector.py  memory.py  scope_guard.py  scout.py  session.py  (+2 more)
scripts/: hooks_config.json  reindex.py  run_hook.bat  run_hook.sh  run_server.bat  run_server.sh
tests/: bench_blast_radius.py  bench_code_index.py  bench_compaction_survival.py  bench_convomem.py  bench_decision_capture.py  bench_decision_capture_v2.py  bench_edit_loop.py  bench_error_capture.py  bench_handoff_durability.py  bench_handoff_project_scope.py  bench_injection_relevance.py  bench_integration.py  bench_locomo.py  bench_longmemeval.py  bench_migrations.py  bench_multi_project.py  bench_obsidian_vault.py  bench_outcomes.py  bench_path_relevance.py  bench_precheck.py  bench_restore_recency_scope.py  bench_scoring.py  bench_session_mining.py  bench_typo_tolerance.py
(+9 files in other folders)
