[project]
name = "claude-engram"
version = "0.2.0"
description = "Persistent memory for Claude Code. Auto-tracks mistakes, decisions, and context via hooks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]

[project.scripts]
claude-engram = "mini_claude.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mini_claude"]
