[project]
name = "claude-engram"
version = "0.8.0"
description = "Persistent memory and session intelligence for Claude Code: auto-tracks mistakes, decisions, and context via hooks, and mines session history for patterns and recall."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Alex Lisenko" }]
keywords = ["claude", "claude-code", "mcp", "memory", "agent", "llm", "session-intelligence"]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/20alexl/claude-engram"
Repository = "https://github.com/20alexl/claude-engram"
Issues = "https://github.com/20alexl/claude-engram/issues"

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=2.7.0",
    "numpy>=1.24.0",
]

[project.scripts]
claude-engram = "claude_engram.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude_engram"]
